deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bebop
  namespace: bebop
spec:
  selector:
    app: bebop
  ports:
    - protocol: TCP
      port: 8080
