deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bebop
  namespace: bebop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: bebop.737.cerwin.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bebop
                port:
                  number: 8080
